--- a/app/src/main/res/layout/fragment_engine.xml
+++ b/app/src/main/res/layout/fragment_engine.xml
@@ -7,9 +7,18 @@
 
     <TextView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:text="Engine Page Placeholder"
         android:textSize="26sp"
+        android:gravity="center"
+        android:layout_marginTop="100dp" />
+
+    <TextView
+        android:id="@+id/rpmLabel"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:text="RPM:"
+        android:textSize="20sp"
         android:gravity="center" />
 
 </FrameLayout>
